[package]
name = "epistory_autotyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "memoryapi", "winnt",
    "tlhelp32", "handleapi", "processthreadsapi", "impl-default", "errhandlingapi", "basetsd", "wow64apiset"] }
toy-arms = { version = "0.9.4", features = ["external"] }
simulate = "0.3.0"

